<resources>
    <string name="app_name">Rent Easy</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="welcome_user">Explore Rent Easy</string>
    <string name="action_settings">Settings</string>
    <string name="cart">Cart</string>
    <string name="empty_cart">Cart is Empty.</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="explore">Explore</string>
    <string name="price">\tPrice\t</string>
    <string name="tenure">\tTenure\t</string>
    <string name="checkout">\tCHECKOUT\t</string>
    <string name="description">Description\t</string>
    <string name="desc_not_avlb">Not Available</string>
    <string name="deposit">Deposit</string>
    <string name="rent_price">Rent Price</string>
    <string name="contact_info">Contact Information</string>
    <string name="address">Address</string>
    <string name="new_address">Add New Address</string>
    <string name="favourites">Favourites</string>
    <string name="no_favourites">No Favourites</string>
    <string name="checkout_msg">Pay Deposit Amount Only and Rent amount once product received </string>
    <string name="deposit_amount">Deposit Amount</string>
    <string name="pay">Pay</string>
    <string name="proceed">Proceed</string>
    <string name="pay_success">Payment is Successful</string>
    <string name="pay_failure">Payment is Unsuccessful</string>
    <string name="pay_msg">We recieved  your order.\nProduct will be delivered soon\n You can track and pay remaining amount From Rented Items </string>
    <string name="checkout_title">Checkout</string>
    <string name="added_to_cart">Added to Cart</string>
    <string name="updated_cart"> Cart is updated</string>
    <string name="notify_product">We will notify once product in stock</string>
    <string name="loading">Loading</string>
    <string name="google_error">Google Play Services error.</string>
    <string name="google_something_wrong">Something went wrong.</string>
    <string name="logout">Logout</string>
    <string name="google_sign_in">Google SignIn</string>
    <string name="no_internet">No Internet Connection.</string>
    <string name="address_1">Address Line 1*</string>
    <string name="address_2">Address Line 2*</string>
    <string name="address_3">Address Line 3*</string>
    <string name="address_4">Pin Code*</string>
    <string name="save_address">Save Address</string>
    <string name="not_now">Not now</string>
    <string name="email">Email</string>
    <string name="enter_mobile_no">Enter Mobile Number</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="something_wrong">Something went wrong.</string>
    <string name="no_products">No Products</string>
    <string name="hot_deals">Hot Deals</string>
    <string name="no_deals">No Deals</string>
    <string name="update">Update</string>
    <string name="login_to_explore">Login to Rent Easy to See Best Deals</string>
    <string name="login_to_profile">Login with Google sign in to view Profile </string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_favorites">Favourites</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_rented_item">Rented Products</string>
    <string name="about_info">This app is developed as part of </string>
    <string name="about_text"> Rent Easy </string>
    <string name="about_text_1">owe things without purchasing</string>
    <string name="about_dev">Developed by \n\tRupesh Padhye(rupeshpadhye@gmail.com)</string>
    <string name="about_udacity">The Udacity Android Nanodegree </string>
    <string name="set_shipping_addr">Set above as Shipping Address</string>
    <string name="primary_shipping_addr">Primary Shipping Address</string>
    <string name="address_validation">Please Select Shipping address</string>
    <string name="successful_message">Transaction Successful</string>
    <string name="sign_in_to_checkout">Sign in with Google</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="mandatory_field">Field is mandatory</string>
    <string name="no_orders">No Orders</string>
</resources>
