<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/ic_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/ic_account_circle"
            android:icon="@drawable/ic_account_circle"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/my_rented_item"
            android:icon="@drawable/ic_action_box"
            android:title="@string/menu_rented_item" />

        <item
            android:id="@+id/my_favourites"
            android:icon="@drawable/ic_fav"
            android:title="@string/menu_favorites" />
        <item
            android:id="@+id/ic_people"
            android:icon="@drawable/ic_people"
            android:title="@string/about" />
    </group>
</menu>
