<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="it.jaschke.alexandria.About">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/about_text"
            style="@style/Base.TextAppearance.AppCompat.Display1"
            android:textColor="@color/colorPrimaryDark"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/about_text_1"
            style="@style/Base.TextAppearance.AppCompat.Small"
            android:id="@+id/textView1"
            android:layout_gravity="center_horizontal"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/about_info"
            android:id="@+id/textView3"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:text="@string/about_udacity"
            android:id="@+id/textView2"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Base.TextAppearance.AppCompat.Small"
            android:text="@string/about_dev"
            android:id="@+id/textView5"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center"/>
    </LinearLayout>

</FrameLayout>
