<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_splash"
    >


    <androidx.cardview.widget.CardView
        android:id="@+id/login_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="125dp"
        cardview:cardElevation="@dimen/cardview_default_elevation"
        cardview:cardCornerRadius="@dimen/cardview_default_radius"
        android:layout_alignParentBottom="true"
        >
    <LinearLayout
        android:id="@+id/sign_out_and_disconnect"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="16dp"
        tools:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_user"
            android:gravity="center"
            android:textStyle="bold"
            />
        <Button
            android:id="@+id/sign_in_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/google_sign_in"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            />

        <Button
            android:id="@+id/sign_in_anonymous"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/not_now"
            style="@style/Base.Widget.AppCompat.Button"
            />
    </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>