<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/topPanel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="@dimen/cardview_default_radius"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                style="@style/HeadingBackgroundStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/textHeadingStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/addressBtn"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawablePadding="@dimen/activity_horizontal_margin"
                    android:drawableRight="@drawable/ic_exposure_plus_1"
                    android:gravity="center_vertical"
                    android:padding="@dimen/app_default_padding"
                    android:text="@string/new_address"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/new_address_block"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/add1_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/app_default_margin"
                            android:layout_weight="0.8">

                            <EditText
                                android:id="@+id/add_line1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/address_1"
                                android:imeOptions="flagNoExtractUi"
                                android:singleLine="true" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/app_default_margin"
                            android:layout_weight="0.8">

                            <EditText
                                android:id="@+id/add_line2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/address_2"
                                android:imeOptions="flagNoExtractUi"
                                android:singleLine="true" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.8">

                            <EditText
                                android:id="@+id/add_line3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/address_3"
                                android:imeOptions="flagNoExtractUi"
                                android:singleLine="true" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/add4_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.8">

                            <EditText
                                android:id="@+id/add_pincode"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/address_4"
                                android:imeOptions="flagNoExtractUi"
                                android:inputType="textPostalAddress"
                                android:singleLine="true" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/cancelAddress"
                                style="@style/Widget.AppCompat.Button.Colored"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center_vertical"
                                android:padding="10dp"
                                android:text="Cancel"
                                android:textAlignment="center"
                                android:textStyle="bold" />

                            <Button
                                android:id="@+id/saveAddress"
                                style="@style/Widget.AppCompat.Button.Colored"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center_vertical"
                                android:padding="@dimen/app_default_padding"
                                android:text="@string/save_address"
                                android:textAlignment="center"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.core.widget.NestedScrollView>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ListView
        android:id="@+id/addresslist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:choiceMode="singleChoice"
        android:listSelector="@color/colorAccent"
        ></ListView>

</LinearLayout>
