<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie_detail_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.app.popularmovies.MovieDetailActivity"
    tools:ignore="MergeRootFrame"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/tabLinerlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMaxWidth="0dp"
            app:tabMode="fixed"
            app:tabGravity="fill"/>
        <android.support.v4.view.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/app_default_margin"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"  />
    </LinearLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/success_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:padding="4dp"
        android:layout_marginTop="100dp"
        android:visibility="gone"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pay_success"
                style="@style/Base.TextAppearance.AppCompat.Large"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:textColor="@color/green"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pay_msg"
                android:textStyle="bold"
                android:gravity="center"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                />
            <Button
                android:id="@+id/explore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/explore"
                android:layout_gravity="center_horizontal"
                android:padding="4dp"
                android:layout_margin="4dp"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>