<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textDirection="anyRtl"
    >
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/app_default_padding"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/HeadingBackgroundStyle"
        >
        <TextView
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            style="@style/textHeadingStyle"
            android:layout_weight="0.8"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            >
            <com.google.android.material.internal.VisibilityAwareImageButton
                android:id="@+id/removeFromCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@android:drawable/ic_delete"

                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/app_default_margin"
        android:layout_marginTop="34dp"
        android:id="@+id/product_row"
        >
        <ImageView
            android:id="@+id/cart_product_img"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_weight="0.1"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
			android:paddingStart="10dp"
            android:layout_weight="0.8"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/price_row"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    style="@style/textSmallStyle"
                    />
            <TextView
                android:id="@+id/product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textSmallStyle"
                />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:id="@+id/tenure_row"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tenure"
                    style="@style/textSmallStyle"
                    />
                <TextView
                    android:id="@+id/product_tenure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/textSmallStyle"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:id="@+id/desc_row"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    style="@style/textSmallStyle"
                    />
                <TextView
                    android:id="@+id/product_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/textSmallStyle"
                    />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>
</LinearLayout>